--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -6,7 +6,6 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="theme-color" content="#712cf9">
-    <title>iaroapp</title>
     <link rel="canonical" href="https://app.iaro.co">
     {% load static %}
 
@@ -29,7 +28,9 @@
     <link rel="stylesheet" href="{% static 'css/loader_animation.css' %}">
 
         {% block extra_css %}{% endblock extra_css %}
-        {% block extra_head %}{% endblock extra_head %}
+        {% block extra_head %}
+            <title>iaroapp</title>
+        {% endblock extra_head %}
 
     <link rel="icon" href="{% static 'images/favicon.png' %}">
 </head>
@@ -147,5 +148,9 @@
 
   });
 </script>
+
+{% block extra_js %}
+{% endblock extra_js %}
+
 </body>
 </html>
