--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -214,6 +214,9 @@
             border-radius: 0.5rem !important;
         }
 
+        .title {
+            display: none !important;
+        }
     </style>
 
     <script>
