--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -7,9 +7,6 @@
         <div class="collapse navbar-collapse mt-sm-0 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
             </div>
-            {#            <form id="logout_form" method="post" action="{% url 'logout' %}">#}
-            {% csrf_token %}
-            </form>
             <ul class="navbar-nav justify-content-end">
                 <li class="nav-item px-3 d-flex align-items-center">
                     <label for="theme-switch" class="nav-link text-body p-0 m-0">
@@ -20,24 +17,23 @@
                 {% if request.user.is_authenticated %}
                     <li class="nav-item d-flex align-items-center">
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'view_notes' %}">
+                            <i class="fas fa-bell" style="opacity: 0.80;" ></i>
+                            <span id="unread-count" class="badge badge-danger" data-toggle="tooltip" title="You have unread messages"></span>
+                        </a>
+                    </li>
                     <li class="nav-item dropdown d-flex align-items-center">
                         <a class="nav-link text-body font-weight-bold px-0" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa fa-user me-sm-1"></i>
-                            <span class="d-sm-inline d-none me-3">Account <span
-                                    style="opacity: 0.75;">({{ user }})</span></span>
+                            <span class="d-sm-inline d-none me-3">Account
+                                <span style="opacity: 0.75;">({{ user }})</span>
+                            </span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'profile' %}" id="show-loading">Profile</a></li>
                             <li><a class="dropdown-item" href="{% url 'customer_index' %}" id="show-loading">Card Dashboard</a></li>
-                            {#                            <li>#}
-                            {#                                <form id="logout_form" action="{% url 'user_logout' %}" method="post"#}
-                            {#                                      style="display: none;">#}
-                            {#                                    {% csrf_token %}#}
-                            {#                                </form>#}
-                            {#                                <a class="dropdown-item" href="#"#}
-                            {#                                   onclick="event.preventDefault(); document.getElementById('logout_form').submit();">Logout</a>#}
-                            {#                            </li>#}
                             {% csrf_token %}
                             <li><a class="dropdown-item" href="{% url 'user_logout' %}" id="show-loading">Log Out</a></li>
                             {% if request.user.is_superuser %}
@@ -84,4 +80,28 @@
     .nav-link[aria-expanded="true"] .fa-user {
         color: #82d616;
     }
+
+    .badge-danger {
+        background-color: rgba(220, 53, 69, 0.9);
+        border-radius: 20%;
+        padding-left: 4px;
+        padding-right: 5px;
+        padding-bottom: 3px;
+    }
+
 </style>
+
+{# unread notification (notes from users) counter #}
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        fetch('/notes/get-unread-count/')
+            .then(response => response.json())
+            .then(data => {
+                const unreadCount = data.unread_count;
+                if (unreadCount > 0) {
+                    document.getElementById('unread-count').textContent = unreadCount;
+                }
+            })
+            .catch(error => console.error('Error fetching unread count:', error));
+    });
+</script>
