--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -16,11 +16,11 @@
                 </li>
                 {% if request.user.is_authenticated %}
                     <li class="nav-item d-flex align-items-center">
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'view_notes' %}">
+                        <a class="nav-link align-content-center d-flex align-items-center" href="{% url 'view_notes' %}">
                             <i class="fas fa-bell" style="opacity: 0.80;" ></i>
-                            <span id="unread-count" class="badge badge-danger" data-toggle="tooltip" title="You have unread messages"></span>
+                            <div class="custom-badge">
+                                <span id="unread-count" data-toggle="tooltip" title="You have unread messages"></span>
+                            </div>
                         </a>
                     </li>
                     <li class="nav-item dropdown d-flex align-items-center">
@@ -81,12 +81,17 @@
         color: #82d616;
     }
 
-    .badge-danger {
+    .custom-badge {
+        {#display: flex;#}
         background-color: rgba(220, 53, 69, 0.9);
-        border-radius: 20%;
-        padding-left: 4px;
-        padding-right: 5px;
-        padding-bottom: 3px;
+        padding: 4px;
+        border-radius: 50%;
+        font-size: 10px;
+        height: 14px;
+        width: 14px;
+        align-items: center;
+        justify-content: center;
+        display: none;
     }
 
 </style>
@@ -98,8 +103,10 @@
             .then(response => response.json())
             .then(data => {
                 const unreadCount = data.unread_count;
+                const badge = document.getElementsByClassName('custom-badge')[0];
                 if (unreadCount > 0) {
-                    document.getElementById('unread-count').textContent = unreadCount;
+                    badge.textContent = unreadCount;
+                    badge.style.display = 'flex';
                 }
             })
             .catch(error => console.error('Error fetching unread count:', error));
