--- a/interactions/templates/view_notes.html
+++ b/interactions/templates/view_notes.html
@@ -101,27 +101,77 @@
 
 
     <style>
-    .title {
-        display: none !important;
-    }
-    body.dark-page textarea {
-        background-color: #323b55 !important;
-    }
-    .select2-results__options {
-        color: #323b55 !important;
-    }
+        .title {
+            display: none !important;
+        }
+        body.dark-page textarea {
+            background-color: #323b55 !important;
+        }
 
-    .select2-selection__choice {
-        color: #323b55 !important;
-        padding-left: 1.6rem !important;
-        padding-right: 0.8rem !important;
-    }
-    .select2-container {
-        background-color: #323b55 !important;
-    }
-    .select2 {
-        width: 100%;
-    }
+
+        /* Custom styles for Select2 */
+        .select2-results__options {
+            color: #323b55 !important;
+        }
+
+        .select2-selection__choice {
+            color: #323b55 !important;
+            padding-left: 1.4rem !important;
+            padding-right: 0.4rem !important;
+
+        }
+
+        .select2-container {
+            background-color: rgba(255, 255, 255, 0) !important;
+        }
+
+        .select2-container--default .select2-selection--multiple {
+            background-color: #f2f1f8;
+            border: 1px solid #ced4da;
+            border-radius: 0.5rem;
+            margin-top: 0 !important;
+            font-size: 1rem;
+            color: #495057;
+            transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        }
+
+        .select2-container--default .select2-selection--multiple .select2-selection__choice {
+            background-color: #c1d5ee;
+            border: 1px solid #0a58ca;
+            border-radius: 0.375rem;
+            color: #fff;
+            font-size: 0.875rem;
+        }
+
+        .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+            color: #495057;
+        }
+
+        .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
+            background-color: #e4e8ef;
+        }
+
+        .select2-dropdown {
+            border-radius: 0.375rem;
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        }
+
+        .select2-search--dropdown .select2-search__field {
+            padding: 0.375rem;
+            font-size: 0.8rem;
+            border: 1px solid #ced4da;
+            border-radius: 0.375rem;
+        }
+
+        .select2-results__option {
+            border-bottom: 1px solid rgba(73, 80, 87, 0.1) !important;
+            background-color: rgba(242, 241, 248, 0.1);
+        }
+
+
+        .select2-results__option--highlighted {
+            background-color: rgba(193, 213, 238, 0.5) !important;
+        }
     </style>
 {% endblock content %}
 
@@ -132,11 +182,13 @@
     $(document).ready(function() {
         $('#id_receivers').select2({
             placeholder: "Select users",
-            allowClear: true
+            allowClear: true,
+            closeOnSelect: false,
         });
         $('#id_branches').select2({
             placeholder: "Select branches",
-            allowClear: true
+            allowClear: true,
+            closeOnSelect: false,
         });
     });
 </script>
