--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -8,7 +8,7 @@
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
             </div>
             <ul class="navbar-nav justify-content-end">
-                <li class="nav-item px-3 d-flex align-items-center">
+                <li class="nav-item d-flex align-items-center">
                     <label for="theme-switch" class="nav-link text-body p-0 m-0">
                         <i class="fa fa-sun fixed-plugin-button-nav cursor-pointer" id="theme-indicator"></i>
                     </label>
@@ -17,7 +17,7 @@
                 {% if request.user.is_authenticated %}
                     <li class="nav-item d-flex align-items-center">
                         <a class="nav-link align-content-center d-flex align-items-center" href="{% url 'view_notes' %}">
-                            <i class="fas fa-bell" style="opacity: 0.80;" ></i>
+                            <i class="fas fa-bell" style="opacity: 0.80; margin-top: 1px" ></i>
                             <div class="custom-badge">
                                 <span id="unread-count" data-toggle="tooltip" title="You have unread messages"></span>
                             </div>
@@ -107,6 +107,8 @@
                 if (unreadCount > 0) {
                     badge.textContent = unreadCount;
                     badge.style.display = 'flex';
+                } else {
+                    badge.style.display = 'none';
                 }
             })
             .catch(error => console.error('Error fetching unread count:', error));
