--- a/interactions/templates/view_notes.html
+++ b/interactions/templates/view_notes.html
@@ -31,27 +31,25 @@
                     <h6>Received Notes</h6>
                     <div id="received-notes">
                         {% for note in received_notes %}
-                            <div class="d-flex justify-content-between note-item">
-                                <div class="user__info w-75">
-                                    <ul>
-                                        <li>
-                                            From
-                                            <img src="{% if note.sender.profile.avatar.url %}{{ note.sender.profile.avatar.url }}{% else %}{% static 'images/avatar.png' %}{% endif %}"
-                                                 alt="{{ note.sender.username }}'s avatar"
-                                                 style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">
-                                            {{ note.sender.username }}:
-                                            {{ note.content }}
-                                        </li>
-                                    </ul>
+                            <div class="note-item">
+                                <div class="note__time d-flex justify-content-center mt-4 text-xxs text-secondary">
+                                    {{ note.timestamp|date:"F j" }},
+                                    {{ note.timestamp|time:"H:i" }}
                                 </div>
-                                <div class="note__time text-xs text-secondary">
-                                    {{ note.timestamp|date:"F j" }}<br>
-                                    {{ note.timestamp|time }}
+                                <div class="user__info mb-2">
+                                    <span class="text-secondary text-xs">From</span>
+                                    <img src="{% if note.sender.profile.avatar.url %}{{ note.sender.profile.avatar.url }}
+                                                {% else %}{% static 'images/avatar.png' %}{% endif %}"
+                                         alt="{{ note.sender.username }}'s avatar">
+                                        <span class="text-bolder">
+                                            {{ note.sender.username }}:
+                                        </span>
+                                        {{ note.content }}
                                 </div>
                             </div>
                         {% endfor %}
                     </div>
-                    <button id="show-more-received" class="w-100 btn bg-gradient-primary" data-type="received">Show More</button>
+{#                    <button id="show-more-received" class="w-100 btn mt-4 bg-gradient-primary" data-type="received">Show More</button>#}
                 </div>
             </div>
         </div>
@@ -60,39 +58,43 @@
             <div class="card h-100" id="notes">
                 <div class="card-body p-3">
                     <h6>Sent Notes</h6>
-                    <div id="sent-notes">
-                        {% for note in sent_notes %}
-                            <div class="d-flex justify-content-between note-item">
-                                <div class="user__info w-75">
-                                    <ul>
-                                        <li>
-                                            To
-                                            {% if note.branches.exists %}
-                                                {% for branch in note.branches.all %}
-                                                    {{ branch.name }}
-                                                    {% if not forloop.last %}, {% endif %}
-                                                {% endfor %}
-                                            {% else %}
-                                                {% for receiver in note.receivers.all %}
-                                                    <img src="{% if receiver.profile.avatar.url %}{{ receiver.profile.avatar.url }}{% else %}{% static 'images/avatar.png' %}{% endif %}"
-                                                         alt="{{ receiver.username }}'s avatar"
-                                                         style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">
-                                                    {{ receiver.username }}
-                                                    {% if not forloop.last %}, {% endif %}
-                                                {% endfor %}
-                                            {% endif %}:
-                                            {{ note.content }}
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="note__time text-xs text-secondary">
-                                    {{ note.timestamp|date:"F j" }}<br>
-                                    {{ note.timestamp|time }}
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <button id="show-more-sent" class="w-100 btn bg-gradient-primary" data-type="sent">Show More</button>
+<div id="sent-notes">
+    {% for note in sent_notes %}
+        <div class="note-item">
+            <div class="note__time d-flex justify-content-center mt-4 text-xxs text-secondary">
+                {{ note.timestamp|date:"F j" }},
+                {{ note.timestamp|time:"H:i" }}
+            </div>
+            <div class="user__info mb-2">
+                <span class="text-secondary text-xs">To</span>
+                {% with total_receivers=note.branches.count|add:note.receivers.count %}
+                    {% for branch in note.branches.all %}
+                        <img src="{% static 'images/avatar.png' %}"
+                             alt="{{ branch.name }}'s avatar">
+                        <span class="text-bolder">
+                            {{ branch.name }}{% if not forloop.last or note.receivers.exists %}, {% endif %}
+                        </span>
+                    {% endfor %}
+                    {% for receiver in note.receivers.all %}
+                        <img src="{% if receiver.profile.avatar.url %}{{ receiver.profile.avatar.url }}
+                                {% else %}{% static 'images/avatar.png' %}{% endif %}"
+                             alt="{{ receiver.username }}'s avatar">
+                        <span class="text-bolder">
+                            {{ receiver.username }}{% if not forloop.last %}, {% endif %}
+                        </span>
+                    {% endfor %}
+                {% endwith %}
+                <span class="text-bolder" style="margin-left: -4px;">:</span>
+                {{ note.content }}
+            </div>
+        </div>
+    {% endfor %}
+</div>
+
+
+
+
+                    {#                    <button id="show-more-sent" class="w-100 btn bg-gradient-primary" data-type="sent">Show More</button>#}
                 </div>
             </div>
         </div>
@@ -101,6 +103,12 @@
 
 
     <style>
+        img {
+            background-color: #483d8b;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+        }
         .title {
             display: none !important;
         }
@@ -108,6 +116,12 @@
             background-color: #323b55 !important;
         }
 
+        #received-notes {
+            justify-content: center;
+        }
+        .note-item {
+            border-bottom: 1px solid rgba(131, 146, 171, 0.2);
+        }
 
         /* Custom styles for Select2 */
         .select2-results__options {
@@ -193,12 +207,12 @@
     });
 </script>
 
-    <script>
-document.addEventListener("DOMContentLoaded", function() {
+<script>
+document.addEventListener("DOMContentLoaded", function () {
     const showMoreButtons = document.querySelectorAll("button[id^='show-more']");
 
     showMoreButtons.forEach(button => {
-        button.addEventListener("click", function() {
+        button.addEventListener("click", function () {
             const type = this.getAttribute("data-type");
             const notesContainer = document.getElementById(`${type}-notes`);
             const offset = notesContainer.getElementsByClassName("note-item").length;
@@ -209,16 +223,67 @@ document.addEventListener("DOMContentLoaded", function() {
                     const notes = data[`${type}_notes`];
                     notes.forEach(note => {
                         const noteDiv = document.createElement("div");
-                        noteDiv.classList.add("d-flex", "justify-content-between", "note-item");
+                        noteDiv.classList.add("note-item");
 
-                        let user_info = '<div class="user__info w-75"><ul><li>From <img src="';
-                        user_info += note.sender_avatar ? note.sender_avatar : '{% static "images/avatar.png" %}';
-                        user_info += '" alt="' + note.sender_username + '\'s avatar" style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">';
-                        user_info += note.sender_username + ': ' + note.content + '</li></ul></div>';
+                        let noteTime = `
+                            <div class="note__time d-flex justify-content-center mt-4 text-xxs text-secondary">
+                                ${note.timestamp_date}, ${note.timestamp_time}
+                            </div>
+                        `;
 
-                        let note_time = '<div class="note__time text-xs text-secondary">' + note.timestamp_date + '<br>' + note.timestamp_time + '</div>';
+                        let noteInfo = '';
+                        if (type === 'received') {
+                            noteInfo = noteTime + `
+                                <div class="user__info mb-2">
+                                    <span class="text-secondary text-xs">From</span>
+                                    <img src="${note.sender_avatar ? note.sender_avatar : '{% static "images/avatar.png" %}'}"
+                                         alt="${note.sender_username}'s avatar"
+                                         style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">
+                                    <span class="text-bolder">${note.sender_username}</span>
+                                    : ${note.content}
+                                </div>
+                            `;
+                        } else {
+                            let recipientsInfo = '<span class="text-secondary text-xs">To</span>';
+                            const userInfos = [];
+                            const branchInfos = [];
 
-                        noteDiv.innerHTML = user_info + note_time;
+                            if (note.sender_username) {
+                                userInfos.push(`
+                                    <img src="${note.sender_avatar ? note.sender_avatar : '{% static "images/avatar.png" %}'}"
+                                         alt="${note.sender_username}'s avatar"
+                                         style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">
+                                    <span class="text-bolder">${note.sender_username}</span>
+                                `);
+                            }
+
+                            if (note.branches) {
+                                note.branches.forEach(branch => {
+                                    branchInfos.push(`
+                                        <img src="{% static 'images/avatar.png' %}"
+                                             alt="${branch.name}'s avatar"
+                                             style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">
+                                        <span class="text-bolder">${branch.name}</span>
+                                    `);
+                                });
+                            }
+
+                            if (userInfos.length > 0) {
+                                recipientsInfo += userInfos.join(', ') + (branchInfos.length > 0 ? ', ' : '');
+                            }
+
+                            if (branchInfos.length > 0) {
+                                recipientsInfo += branchInfos.join(', ');
+                            }
+
+                            recipientsInfo += ': ';
+
+                            let contentInfo = `<div>${note.content}</div>`;
+
+                            noteInfo = noteTime + recipientsInfo + contentInfo;
+                        }
+
+                        noteDiv.innerHTML = noteInfo;
                         notesContainer.appendChild(noteDiv);
                     });
                 })
@@ -227,4 +292,8 @@ document.addEventListener("DOMContentLoaded", function() {
     });
 });
 </script>
+
+
+
+
 {% endblock extra_js %}
